# Reshet-Network

./: .gitignore  README.md  docker-compose.yml  nginx.conf
codex/: Cargo.toml  Dockerfile
codex/src/: main.rs
codex/src/db/: mod.rs  query_creator.rs  query_errors.rs
codex/src/db/queries/: insert.sparql
codex/src/utils/: mod.rs
data/: ling_terms.txt
data/queries/: cal.sparql  defined.ttl  get_a_chapter.php?file=60040&sub=1&cset=S  short-out.ttl
ontologies/: bibframe.ttl  cidoc-crm.ttl  codex.ttl  gold.ttl  meta.ttl  slo.ttl
reshet/: package-lock.json  package.json
reshet-scripts/reshet-notes/notebooks/: ExploreParsingsFile.ipynb  Untitled.ipynb
skg-scripts/: .gitignore
skg-scripts/skg-notes/: LinguisticParti.rst  ontologies.md
skg-scripts/skg-notes/notebooks/: oshb_parsings.py
taxonomies/: catalog-v001.xml  hebx.trig  hebx.ttl  hebx2.trig
